@@ -414,7 +414,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MMAP
 AC_TYPE_SIGNAL
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS(gettimeofday strstr strtod strtol atexit)
+AC_CHECK_FUNCS(gettimeofday strstr strtod strtol atexit bcopy)
 
 dnl
 dnl System specific tests
